IAM-513 Create new temporal attributes